#161: Play All - Alignment Issue

--- a/web-app/css/cgrails/default/less/discipline-list.less
+++ b/web-app/css/cgrails/default/less/discipline-list.less
@@ -190,7 +190,7 @@
 	}
 }
 
-@media (min-width: 768px) and (max-width: 1024px) { 
+@media (min-width: 768px) and (max-width: 1200px) { 
 	#product-list {
 		.discipline-music-container{
 			.playlist {
